just change some texts

--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -24,11 +24,11 @@
   <div class="legend">
     <h1>legend:</h1>
     <div class="center">press and move to scratch the card</div>
-    <div class="center">the coin will try to rotate to follow the path</div>
+    <div class="center">the scratch coin will try to rotate and follow the path</div>
     <div class="center">coin scratch pattern is random</div>
     <div class="container">
       <div class="subcontainer">
-        <div class="left">something</div><div class="right">something</div>
+        <div class="left">.</div><div class="right">.</div>
         <div class="clear"></div>
       </div>
     </div>
